gccida/g3/gen_split_958
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_958/src/insn-emit.c:8774:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_lowpart( ( machine_mode)( !v2 + 4), v3); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_958/src/insn-emit.c:8778:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_lowpart( ( machine_mode)( !v2 + 4), v5); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_958/src/insn-emit.c:8782:21: error: use of undeclared identifier 'machine_mode'
v8 = gen_lowpart( ( machine_mode)( !v2 + 4), v7); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_958/src/insn-emit.c:8788:31: error: use of undeclared identifier 'machine_mode'
v13 = gen_rtx_fmt_ee( MULT, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v10, v9); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_958/src/insn-emit.c:8789:31: error: use of undeclared identifier 'machine_mode'
v14 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v13, v11); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_958/src/insn-emit.c:8790:31: error: use of undeclared identifier 'machine_mode'
v15 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v14, v12); 
                              ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_958/src/obj/insn-emit.o] Error 1
